--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="user-desc">
           <h1>Andrew Sokolovsky</h1>
           <ul>
-            <li><img src="images/work.png" alt="work">Manager</li>
-            <li><img src="images/mark.png" alt="mark">Lives in Kiev</li>
-            <li><img src="images/seting.png" alt="seting">66 have you in circles</li>
+            <li class="work">Manager</li>
+            <li class="city">Lives in Kiev</li>
+            <li class="seting">66 have you in circles</li>
           </ul>
         </div>
       </div>
