--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul>
             <li class="work">Manager</li>
             <li class="city">Lives in Kiev</li>
-            <li class="seting">66 have you in circles</li>
+            <li class="setting">66 have you in circles</li>
           </ul>
         </div>
       </div>
