--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="tab-content">
     <div class="container">
-      <div id="about" class="tabcontent">
+      <article id="about" class="tabcontent">
         <div class="about-wrapper">
           <div class="about-iteam">
             <div class="about-desc">
@@ -132,7 +132,7 @@
             </div>  
           </div>
         </div>
-      </div>
+      </article>
       <div id="photos" class="tabcontent">
         <div class="container">
           <div class="filter-photos">
