edit img :before

--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <div class="user-block">
-        <div class="user-info">
-          <img src="images/avatar.png" alt="avatar">
-        </div>
-        <div class="user-desc">
-          <h1>Andrew Sokolovsky</h1>
-          <ul>
-            <li class="work">Manager</li>
-            <li class="city">Lives in Kiev</li>
-            <li class="setting">66 have you in circles</li>
-          </ul>
-        </div>
+    <div class="container user-block">
+      <div class="user-info">
+        <img src="images/avatar.png" alt="avatar">
+      </div>
+      <div class="user-desc">
+        <h1>Andrew Sokolovsky</h1>
+        <ul>
+          <li class="work">Manager</li>
+          <li class="city">Lives in Kiev</li>
+          <li class="setting">66 have you in circles</li>
+        </ul>
       </div>
     </div>
   </header>
@@ -65,7 +63,7 @@
                 </div>
               </div>
               <div class="edit">
-                <a href="#"><img src="images/edit.png" alt="user">Edit</a>
+                <a href="#">Edit</a>
               </div>
             </div>  
           </div>
@@ -79,7 +77,7 @@
               <h2>Bragging rights</h2>
               <p>Examples: Survived secondary school, have 3 kids, etc.</p>  
               <div class="edit">
-                <a href="#"><img src="images/edit.png" alt="edit">Edit</a>
+                <a href="#">Edit</a>
               </div>
             </div>  
           </div>
@@ -93,7 +91,7 @@
               <h2>Bragging rights</h2>
               <p>Examples: Survived secondary school, have 3 kids, etc.</p>
               <div class="edit">
-                <a href="#"><img src="images/edit.png" alt="edit">Edit</a>
+                <a href="#">Edit</a>
               </div>
             </div>  
           </div>
@@ -127,7 +125,7 @@
                 </div>
               </div>
               <div class="edit">
-                <a href="#"><img src="images/edit.png" alt="edit">Edit</a>
+                <a href="#">Edit</a>
               </div>
             </div>  
           </div>
