--- a/photo.html
+++ b/photo.html
@@ -26,112 +26,12 @@
   <div class="tab">
     <nav class="navigation container">
       <a href="#" class="tablinks" onclick="openTab(event, 'about')"  id="defaultOpen">about</a>
-      <a href="#" class="tablinks" onclick="openTab(event, 'photos')">photos</a>
+      <a href="photo.html" class="tablinks" onclick="openTab(event, 'photos')">photos</a>
     </nav>
-
   </div>
   <div class="tab-content">
     <div class="container">
-      <article id="about" class="tabcontent">
-        <div class="about-wrapper">
-          <div class="about-iteam">
-            <div class="about-desc">
-              <h1>People</h1>
-              <h2>In your circles</h2>
-              <p>You havent added anyone or you’re not displaying this.</p>
-              <h2>Have you in circles <span><a href="#">View all (66)</a></span></h2>
-              <div class="about-user">
-                <div class="user-img">
-                  <a href="#"><img src="images/user5.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user3.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user4.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user2.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user6.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user2.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user1.png" alt="user"></a>
-                </div>
-              </div>
-              <div class="edit">
-                <a href="#">Edit</a>
-              </div>
-            </div>  
-          </div>
-          <div class="about-iteam top-purple">
-            <div class="about-desc">
-              <h1>Work</h1>
-              <h2>Occupation</h2>
-              <p>Online projects</h2>
-              <h2>Introduction</h2>
-              <p>Put a little bit about yourself here so people know they’ve found the corrent Adi.</p>
-              <h2>Bragging rights</h2>
-              <p>Examples: Survived secondary school, have 3 kids, etc.</p>  
-              <div class="edit">
-                <a href="#">Edit</a>
-              </div>
-            </div>  
-          </div>
-          <div class="about-iteam top-red">
-            <div class="about-desc">
-              <h1>Story</h1>
-              <h2>Tagline</h2>
-              <p>A brief description of you</p>
-              <h2>Introduction</h2>
-              <p>Put a little bit about yourself here so people know they’ve found the corrent Adi.</p>
-              <h2>Bragging rights</h2>
-              <p>Examples: Survived secondary school, have 3 kids, etc.</p>
-              <div class="edit">
-                <a href="#">Edit</a>
-              </div>
-            </div>  
-          </div>
-          <div class="about-iteam top-orange">
-            <div class="about-desc">
-              <h1>Edocation</h1>
-              <h2>In your circles</h2>
-              <p>You havent added anyone or you’re not displaying this.</p>
-              <h2>Have you in circles <span><a href="#">View all (66)</a></span></h2>
-              <div class="about-user">
-                <div class="user-img">
-                  <a href="#"><img src="images/user5.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user3.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user4.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user2.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user6.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user2.png" alt="user"></a>
-                </div>
-                <div class="user-img">
-                  <a href="#"><img src="images/user1.png" alt="user"></a>
-                </div>
-              </div>
-              <div class="edit">
-                <a href="#">Edit</a>
-              </div>
-            </div>  
-          </div>
-        </div>
-      </article>
+      
       <article id="photos" class="tabcontent">
         <div class="container">
           <div class="filter-photos">
